# crawler

./: .env.example  .gitignore  pyproject.toml
downloaded/: data.json
examples/: crawler_example.py  mirror_example.py  server_example.py
src/crawler/: crawler.py  server.py  url_manager.py
src/crawler/utils/: url_encoders.py
tests/: crawler_test.py  server_test.py
