[project]
name = "crawler"
version = "v0.0.1"
authors = [
  { name="ityeri", email="ityeri9@gmail.com" },
]
description = "Do you wanna some crawling?"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.121.1",
    "playwright>=1.56.0",
    "uvicorn>=0.38.0",
    "yarl>=1.22.0",
]

[project.urls]
Homepage = "https://github.com/ityeri/crawler"
Issues = "https://github.com/ityeri/crawler/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
